--- a/views/index.jade
+++ b/views/index.jade
@@ -2,4 +2,4 @@ extends layout
 
 block content
   div#app
-  script(src="../js/main.8a22726e4b9786f595b6.js", type="text/javascript", charset="utf-8")
+  script(src="../js/main.js", type="text/javascript", charset="utf-8")
