--- a/views/layout.jade
+++ b/views/layout.jade
@@ -3,5 +3,6 @@ html
   head
     title= title
     link(rel="stylesheet", type="text/css" ,href="../css/app.css")
+    script(src="../js/common.js", type="text/javascript", charset="utf-8")
   body
     block content
