--- a/views/bg_singin.jade
+++ b/views/bg_singin.jade
@@ -5,8 +5,8 @@ html
 		title 登录
 		style.
 			body{
-				background:url(../img/banner.jpg)repeat;
-				padding:100px 0px 30px 0px;
+				background:url(/img/banner.jpg)repeat;
+				padding:190px 0px 30px 0px;
 				font-family:'Roboto',sans-serif;:
 				font-size:100%;
 			}
@@ -23,8 +23,95 @@ html
 				margin: 0px 0px 50px 0px;
 				font-family: 'Droid Serif', serif;
 			}
+			.login-top{
+				background: #E1E1E1;
+				border-radius: 25px 25px 0px 0px;
+				-webkit-border-radius: 25px 25px 0px 0px;
+				-moz-border-radius: 25px 25px 0px 0px;
+				-o-border-radius: 25px 25px 0px 0px;
+				padding: 40px 60px;
+			}
+			.login-top h1{
+				text-align: center;
+				font-size: 27px;
+				font-weight: 700;
+				color: #F45B4B;
+				margin: 0px 0px 20px 0px;
+			}
+			.login-top .txtbox{
+				outline: none;
+				font-size: 15px;
+				font-weight: 500;
+				color: #818181;
+				padding: 15px 20px;
+				background: #CACACA;
+				border: 1px solid #ccc;
+				border-radius: 25px;
+				-webkit-border-radius: 25px;
+				-moz-border-radius: 25px;
+				-o-border-radius: 25px;
+				margin: 0px 0px 12px 0px;
+				width: 88%;
+				-webkit-appearance: none;
+			}
+			.btn-box{
+				text-align:right;
+			}
+			.btn-box .btn-login{
+				background: #F45B4B;
+				color: #FFF;
+				font-size: 17px;
+				font-weight: 400;
+				padding: 8px 7px;
+				width: 20%;
+				display: inline-block;
+				cursor: pointer;
+				border-radius: 6px;
+				-webkit-border-radius: 19px;
+				-moz-border-radius: 6px;
+				-o-border-radius: 6px;
+				margin: 0px 7px 0px 3px;
+				outline: none;
+				border: none;
+			}
+			.login-bottom{
+				background: #E15748;
+				padding: 30px 65px;
+				border-radius: 0px 0px 25px 25px;
+				-webkit-border-radius: 0px 0px 25px 25px;
+				-moz-border-radius: 0px 0px 25px 25px;
+				-o-border-radius: 0px 0px 25px 25px;
+				text-align: right;
+				border-top: 2px solid #AD4337;
+			}
+			.copyright{
+				padding: 150px 0px 0px 0px;
+				text-align: center;
+			}
+			.copyright p{
+				font-size: 15px;
+				font-weight: 400;
+				color: #fff;
+			}
+
+			.login-bottom h3 {
+				font-size: 14px;
+				font-weight: 500;
+				color: #fff;
+			}
 
 	body
 		div.warp
 			div.singin-box
 				h2 川藏管理区Web后台管理
+				div.login-top
+					h1 LOGIN FORM
+					form(method='post',action='')
+						input(type='text',placeholder='User Id',class='txtbox',name='username')
+						input(type='password',placeholder='password',class='txtbox',name='password')
+						div.btn-box
+							input(type='submit',value='Login',class='btn-login')
+				div.login-bottom
+					h3= msg
+				div.copyright
+					p Copyright © 2015.圆通速递川藏管理区
