--- a/views/layout.jade
+++ b/views/layout.jade
@@ -2,7 +2,7 @@ doctype html
 html
   head
     title= title
-    link(rel="stylesheet", type="text/css" ,href="../css/app.css")
+    link(rel="stylesheet", type="text/css" ,href="/css/main.css")
     script(src="../js/common.js", type="text/javascript", charset="utf-8")
   body
     block content
