--- a/views/bg_layout.jade
+++ b/views/bg_layout.jade
@@ -4,6 +4,7 @@ doctype html
 html
     head
         title= title
+        link(rel='stylesheet',type='text/css',href='/lib/bootstrap/css/bootstrap.css')
         link(rel="stylesheet", type="text/css" ,href="/css/bg_main.css")
         script(src="../js/common.js", type="text/javascript", charset="utf-8")
     body
