Add siteInfo CURD

--- a/views/bg_index.jade
+++ b/views/bg_index.jade
@@ -2,4 +2,5 @@ extends bg_layout
 
 block content
     div#bgapp
+    script(src="../js/common.js", type="text/javascript", charset="utf-8")
     script(src="../js/bg_main.js", type="text/javascript", charset="utf-8")
