--- a/views/index.jade
+++ b/views/index.jade
@@ -2,4 +2,5 @@ extends layout
 
 block content
   div#app
+  script(src="../js/common.js", type="text/javascript", charset="utf-8")
   script(src="../js/main.js", type="text/javascript", charset="utf-8")
